scrape 10 hotels by city

--- a/notebook/scrape_booking.ipynb
+++ b/notebook/scrape_booking.ipynb
@@ -11,33 +11,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import\n",
     "import os\n",
+    "import json\n",
     "import time\n",
-    "import requests\n",
     "import pandas as pd\n",
-    "from bs4 import BeautifulSoup\n",
     "from IPython.display import display"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['city', 'name', 'url', 'image_url', 'score', 'description'], dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# read json from scrapy spider\n",
+    "hotels_file = \"../data/temp/hotels-booking.json\"\n",
+    "\n",
+    "# file to json\n",
+    "hotels_json = json.load(open(hotels_file))\n",
+    "\n",
+    "# json to df\n",
+    "hotels_df = pd.json_normalize(hotels_json)\n",
+    "\n",
+    "display(hotels_df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# booking hotel pages for France top 35 destinations\n",
-    "dict_links = {\n",
-    "    \"Bormes les Mimosas\": \"https://www.booking.com/searchresults.fr.html?label=gen173nr-1FCAEoggI46AdIM1gEaE2IAQGYAQ24AQfIAQzYAQHoAQH4AQuIAgGoAgO4Arm1mo0GwAIB0gIkZjE3NDZhZDItOTUyYS00NjljLWE5N2ItNzUxZjIxMTdjNDdi2AIG4AIB&sid=a8d69dac58d2b76c1d2bb743d5182840&aid=304142&sb_lp=1&src=index&error_url=https%3A%2F%2Fwww.booking.com%2Findex.fr.html%3Flabel%3Dgen173nr-1FCAEoggI46AdIM1gEaE2IAQGYAQ24AQfIAQzYAQHoAQH4AQuIAgGoAgO4Arm1mo0GwAIB0gIkZjE3NDZhZDItOTUyYS00NjljLWE5N2ItNzUxZjIxMTdjNDdi2AIG4AIB%3Bsid%3Da8d69dac58d2b76c1d2bb743d5182840%3Bsb_price_type%3Dtotal%26%3B&ss=Bormes-les-Mimosas%2C+Provence-Alpes-C%C3%B4te+d%27Azur%2C+France&is_ski_area=&checkin_year=&checkin_month=&checkout_year=&checkout_month=&group_adults=2&group_children=0&no_rooms=1&b_h4u_keep_filters=&from_sf=1&ss_raw=bormes&ac_position=0&ac_langcode=fr&ac_click_type=b&dest_id=-1413801&dest_type=city&place_id_lat=43.1507&place_id_lon=6.34193&search_pageview_id=2cde989cc7530174&search_selected=true&search_pageview_id=2cde989cc7530174&ac_suggestion_list_length=5&ac_suggestion_theme_list_length=0&nflt=ht_id%3D204\",\n",
-    "    \"Uzes\": None,\n",
-    "    \"Nimes\": None,\n",
-    "    \"Gorges du Verdon\": None,\n",
-    "    \"Avignon\": None\n",
-    "}"
+    "# clean some text\n",
+    "def clean_text(text) :\n",
+    "    return text.replace(\"\\n\", \"\")\n",
+    "\n",
+    "hotels_df[\"name\"] = hotels_df[\"name\"].apply(lambda x : clean_text(x))\n",
+    "hotels_df[\"score\"] = hotels_df[\"score\"].apply(lambda x : clean_text(x))\n",
+    "hotels_df[\"description\"] = hotels_df[\"description\"].apply(lambda x : clean_text(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# astring score\n",
+    "hotels_df[\"score\"] = hotels_df[\"score\"].astype(float)"
    ]
   },
   {
@@ -48,7 +84,13 @@
     {
      "data": {
       "text/plain": [
-       "'https://www.booking.com/searchresults.fr.html?label=gen173nr-1FCAEoggI46AdIM1gEaE2IAQGYAQ24AQfIAQzYAQHoAQH4AQuIAgGoAgO4Arm1mo0GwAIB0gIkZjE3NDZhZDItOTUyYS00NjljLWE5N2ItNzUxZjIxMTdjNDdi2AIG4AIB&sid=a8d69dac58d2b76c1d2bb743d5182840&aid=304142&sb_lp=1&src=index&error_url=https%3A%2F%2Fwww.booking.com%2Findex.fr.html%3Flabel%3Dgen173nr-1FCAEoggI46AdIM1gEaE2IAQGYAQ24AQfIAQzYAQHoAQH4AQuIAgGoAgO4Arm1mo0GwAIB0gIkZjE3NDZhZDItOTUyYS00NjljLWE5N2ItNzUxZjIxMTdjNDdi2AIG4AIB%3Bsid%3Da8d69dac58d2b76c1d2bb743d5182840%3Bsb_price_type%3Dtotal%26%3B&ss=Bormes-les-Mimosas%2C+Provence-Alpes-C%C3%B4te+d%27Azur%2C+France&is_ski_area=&checkin_year=&checkin_month=&checkout_year=&checkout_month=&group_adults=2&group_children=0&no_rooms=1&b_h4u_keep_filters=&from_sf=1&ss_raw=bormes&ac_position=0&ac_langcode=fr&ac_click_type=b&dest_id=-1413801&dest_type=city&place_id_lat=43.1507&place_id_lon=6.34193&search_pageview_id=2cde989cc7530174&search_selected=true&search_pageview_id=2cde989cc7530174&ac_suggestion_list_length=5&ac_suggestion_theme_list_length=0&nflt=ht_id%3D204'"
+       "city            object\n",
+       "name            object\n",
+       "url             object\n",
+       "image_url       object\n",
+       "score          float64\n",
+       "description     object\n",
+       "dtype: object"
       ]
      },
      "execution_count": 39,
@@ -57,93 +99,18 @@
     }
    ],
    "source": [
-    "# get city & link\n",
-    "city = list(dict_links.keys())[0]\n",
-    "city_booking_url = dict_links[city]\n",
-    "\n",
-    "city_booking_url\n",
-    "\n"
+    "hotels_df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sleep 10s\n",
-    "time.sleep(10)\n",
-    "\n",
-    "# requests\n",
-    "r = requests.get(city_booking_url)\n",
-    "\n",
-    "# scrapping with beautifoul soup\n",
-    "soup = BeautifulSoup(r.text, \"html.parser\")\n",
-    "\n"
+    "# save\n",
+    "hotels_df.to_csv(\"../data/temp/hotels_booking.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<li class=\"bui-grid__column bui-grid__column-3\">\n",
-      "<a class=\"bui-list-item bui-list-item--size-small\" data-lang=\"en-gb\" href=\"/city/fr/bormes-les-mimosas.en-gb.html\" hreflang=\"en-gb\">\n",
-      "<div class=\"bui-inline-container bui-inline-container--align\">\n",
-      "<div class=\"bui-inline-container__start\">\n",
-      "<div class=\"bui-avatar bui-avatar--small bui-traveller-header__language\">\n",
-      "<img alt=\"\" class=\"bui-avatar__image\" src=\"https://cf.bstatic.com/static/img/flags/new/48-squared/gb/daba79fdd4066d133e8bf59070fd6819b951c403.png\"/>\n",
-      "</div>\n",
-      "</div>\n",
-      "<div class=\"bui-inline-container__main\" lang=\"en-gb\">\n",
-      "English (UK)\n",
-      "</div>\n",
-      "</div>\n",
-      "</a>\n",
-      "</li>\n"
-     ]
-    }
-   ],
-   "source": [
-    "# tbody\n",
-    "tbody = soup.body\n",
-    "print(tbody.li)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# get number of pages\n",
-    "# class-item\n",
-    "class_css = \"e603a69fe1\"\n",
-    "page_item = tbody.find_all(\"div\", class_css)\n",
-    "page_item"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
