scrapping python code done

--- a/notebook/scrape_booking.ipynb
+++ b/notebook/scrape_booking.ipynb
@@ -109,8 +109,16 @@
    "outputs": [],
    "source": [
     "# save\n",
-    "hotels_df.to_csv(\"../data/temp/hotels_booking.csv\")"
+    "export_hotels_csv = \"../data/temp/hotels_booking.csv\"\n",
+    "hotels_df.to_csv(export_hotels_csv)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
